@@ -199,7 +199,7 @@ Opens, reads, and hashes the contents of the file 'filename' The result must be 
 </div>
 </div><p>
 </div>
-<hr size="1"><address style="text-align: right;"><small>Generated on Fri Mar 19 11:09:38 2010 for Fuzzy Hashing API by&nbsp;
+<hr size="1"><address style="text-align: right;"><small>Generated on Sat Mar 20 18:25:53 2010 for Fuzzy Hashing API by&nbsp;
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border="0"></a> 1.5.6 </small></address>
 </body>
