@@ -24,7 +24,7 @@ These functions allow a programmer to compute the fuzzy hashes (also called the 
 <dl class="date" compact><dt><b>Date:</b></dt><dd>March 2010</dd></dl>
 <dl class="author" compact><dt><b>Author:</b></dt><dd>Jesse Kornblum, research {at jessekornblum dot} com. </dd></dl>
 </div>
-<hr size="1"><address style="text-align: right;"><small>Generated on Fri Mar 19 11:09:38 2010 for Fuzzy Hashing API by&nbsp;
+<hr size="1"><address style="text-align: right;"><small>Generated on Sat Mar 20 18:25:53 2010 for Fuzzy Hashing API by&nbsp;
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border="0"></a> 1.5.6 </small></address>
 </body>
